navbar and footer

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,13 +1,11 @@
 @media (prefers-reduced-motion: no-preference) {
   @import '~bootstrap/scss/bootstrap';
 }
-.footer {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  min-height: 10vh;
-  background-color: #454547;
-  color: white;
+
+
+body {
+  margin: 0;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font-family: 'Lora', serif;
 }
-
-
