--- a/src/components/structure/footer/footer.scss
+++ b/src/components/structure/footer/footer.scss
@@ -4,7 +4,7 @@
     margin-top: 1rem;
     padding: 2rem;
     background-color: $accentColor;
-    position: fixed;
+    position: relative;
     bottom: 0;
     left: 0;
     width: 100%;
