--- a/src/components/structure/eventList/EventList.scss
+++ b/src/components/structure/eventList/EventList.scss
@@ -2,6 +2,7 @@
 	display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     grid-gap: 20px;
+	padding-top: 10px;
 }
 
 .card {
@@ -49,6 +50,12 @@
 
 .card-title-group {
 	justify-content: center;
+	height: 100px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+
 }
 
 .card-title {
@@ -67,24 +74,10 @@
 	border-radius: 10px;
 	margin-bottom: 10px;
 	margin-top: 10px;
-}
-.card-like-icon {
-	height: 25px;
-}
+	height: 250px;
 
-.card-text {
-	width: 350px;
-	font-size: medium;
-}
 
-.card-like-bar {
-	display: flex;
-	align-items: center;
-	margin-top: 20px;
-	justify-content: space-between;
 }
-
-.like-text {
-	font-size: small;
-	margin-left: 10px;
-}
+ .btn btn-outline-secondary{
+	 margin-bottom: 5px;
+ }
