--- a/src/components/structure/footer/footer.scss
+++ b/src/components/structure/footer/footer.scss
@@ -10,6 +10,11 @@
     width: 100%;
     color: $textColor; 
   }
+  .h6{
+    position: absolute;
+    left: 0px;
+    top: 0px;
+  }
   .buttons {
     overflow: auto;
     position: absolute;
