--- a/src/components/structure/navbar/navbar.scss
+++ b/src/components/structure/navbar/navbar.scss
@@ -2,9 +2,22 @@
 
 .navbar {
     background-color: $accentColor;
-     padding: 1rem;
+     padding: 1rem 5rem 1rem 3rem;
+     @media (max-width: 320px) {
+        padding: 5px;
+		justify-content: center;
+		}
 }
 .title{
     color: $textColor; 
     font-family: 'Lora', serif;
+ 
+    ;
+}
+.nav-link{
+    font-size: 20px;
+    line-height: 1,5;
+    @media (max-width: 320px) {
+        line-height: 1;
+}
 }
