--- a/src/components/structure/pages/home.scss
+++ b/src/components/structure/pages/home.scss
@@ -7,11 +7,18 @@
     justify-content: center;
     text-align: center;
     align-items: center;
+    @media (max-width: 320px) {
+        line-height: 1;
+        margin: 5px ;
+}
     
 }
 
 .invite{
     margin-bottom: 30px;
+    @media (max-width: 320px) {
+        font-size: 22px;
+    }
 }
 .categories-block{
    
@@ -23,6 +30,9 @@
     max-width: 400px;
     line-height: 2;
     margin: 0 auto;
+    @media (max-width: 320px) {
+        font-size: 15px;
+}
 
 }
 
@@ -45,6 +55,16 @@ padding: 0 20px;
 
 h2 {
 font-size: 20px;
+@media (max-width: 320px) {
+    font-size: 15px;
+}
+}
+
+ h3 {
+
+    @media (max-width: 320px) {
+        font-size: 23px;
+    }
 }
 
 @media only screen and (min-width : 992px) {
