--- a/src/components/eventList/EventList.scss
+++ b/src/components/eventList/EventList.scss
@@ -1,9 +1,10 @@
 .card-list {
 	display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
     grid-gap: 20px;
 	padding-top: 10px;
 	vertical-align: middle;
+	margin: 5px;
 }
 
 .card {
@@ -15,7 +16,7 @@
 	border-color: tomato;
 	border-style: solid;
 	transition: 200ms;
-    max-width: 380px;
+    max-width: 500px;
 	vertical-align: middle;
 	}
 
@@ -34,16 +35,14 @@
 }
 
 .profile {
-	display: inline-flex;
+	
 	width: 10 px;
-	border-radius: 40%;
+	
 	margin: 10px;
 	font-size: 20pt;
 	text-align: center;
 	font-weight: bold;
 	color: rgb(8, 8, 8);
-	justify-content: center;
-	box-sizing: border-box;
 	
 	
 }
