--- a/src/components/modal/likeButtons.scss
+++ b/src/components/modal/likeButtons.scss
@@ -1,37 +1,63 @@
-like-content {
-    display: inline-block;
-    width: 100%;
-    margin: 40px 0 0;
-    padding: 40px 0 0;
-    font-size: 18px;
-    border-top: 10px dashed #eee;
-    text-align: center;
-}
+.like-content {
+	text-align: center;
+	
+	@media (max-width: 540px) {
+		
+		flex-wrap: wrap;
+		justify-content: center;
+	
+		}
+	  }
+
 
 .like-buttons{
 	display: flex;
-	align-content: space-between;
+	
+	
 }
 .like-content span {
 	color: #9d9da4;
 	font-family: monospace;
+	animation: pulse 500ms ease-in-out;
+	@media (max-width: 540px) {
+		text-align: center;
+	  }
+
+	  @keyframes pulse {
+		0%, 100%{
+			transform: scale(1);
+		}
+	   50%{
+		  transform: scale(1.5);
+	  }
+}  
 }
+
+
+
 .like-content .btn-secondary {
 	  display: block;
-	  margin: 40px auto 0px;
+	  margin: 15px auto 0px;
     text-align: center;
     background: #ed2553;
     border-radius: 3px;
     box-shadow: 0 10px 20px -8px rgb(240, 75, 113);
-    padding: 10px 17px;
-    font-size: 18px;
-    cursor: pointer;
+    padding: 7px 13px;
+    font-size: 13px;
+    
     border: none;
     outline: none;
     color: #ffffff;
     text-decoration: none;
     -webkit-transition: 0.3s ease;
     transition: 0.3s ease;
+	width: 110px;
+	@media (max-width: 540px) {
+		width: 65px;
+		padding: 1px 5px;
+		margin: 10px 10px;
+
+	  }
 }
 
 .like-content .btn-secondary:hover {
@@ -39,12 +65,22 @@ like-content {
 }
 .like-content .btn-secondary .fa {
 	  margin-right: 5px;
+	  @media (max-width: 540px) {
+		margin: 2px 2px;
+		font-size: 5px;
+
+	  }
 }
 
 .like-counter{
 	
-	margin: 50px auto 0px;
+	margin: 25px auto 0px;
 	align-content: center;
+	@media (max-width: 540px) {
+		text-align: center;
+		margin: 10px auto 0px;
+	
+	  }
 
 }
 .animate-like {
@@ -56,41 +92,4 @@ like-content {
 @keyframes likeAnimation {
   0%   { transform: scale(30); }
   100% { transform: scale(1); }
-}
-
-
-
-
-
-
-
-
-
-
-
-
-button.like{
-	width: 30px;
-	height: 30px;
-	margin: 0 auto;
-	
-	border-radius: 50%;
-	color: rgba(0,150,136 ,1);
-	background-color:rgba(38,166,154 ,0.3);
-	border-color: rgba(0,150,136 ,1);
-	border-width: 1px;
-	font-size: 15px;
-}
-
-button.dislike{
-	width: 30px;
-	height: 30px;
-	margin: 0 auto;
-	
-	border-radius: 50%;
-	color: rgba(255,82,82 ,1);
-	background-color: rgba(255,138,128 ,0.3);
-	border-color: rgba(255,82,82 ,1);
-	border-width: 1px;
-	font-size: 15px;
 }
